change services configurations